--- a/index.css
+++ b/index.css
@@ -1,12 +1,11 @@
 /*CSS for Home*/
 body{
-	/*background: rgb(0, 102, 200);*/
-	background: rgb(20,20,20);
+	background: #e3e0cf;
 }
 h1{
 	font-family: "Comfortaa";
 	font-size: 125%;
-	color: #0040ff;
+	color: black;
 	padding: 10px;
 	height: auto;
 	width: 20%;
@@ -14,10 +13,10 @@ h1{
 p{
 	font-family: "Comfortaa";
 	font-size: 100%;
-	color: #0040ff;
+	color: black;
 	height: auto;
 	width: 80%;
-	background-color: rgb(40, 40, 40);
+	background-color: #c5d5cb;
 	padding: 10px;
 }
 a{
@@ -26,26 +25,25 @@ a{
 	font-size: 125%;
 	padding : 10px;
 	float: left;
-	color: #0040ff;
+	color: black;
 }
 span{
 	float: left;
 }
 th, td{
-	color: #0040ff;
+	font-family: "Comfortaa";
+	color: black;
 }
 .signup a:hover {
-    background-color: rgb(200, 200, 200);
+   color: white;
 }
 #mainlogo{
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
+	padding-top: 50px;
+	display: inline-block;
+	list-style-type: none;
 }
 #nav{
 	text-align: center;
-	/*background: rgb(0, 102, 200);*/
-	background: rgb(20,20,20);
 	height: 50;
 	margin-left: auto;
     margin-right: auto;
@@ -61,21 +59,26 @@ th, td{
 #nav ul li a{
 	font-family: "Comfortaa";
 	text-decoration: none;
-	font-size: 125%;
-	color: #0040ff;
+	font-size: 150%;
+	color: black;
 }
 #nav ul li a:hover {
-   color: #0040ff;
+   color: white;
 }
 
 #nav ul li .current{
-	background-color: rgb(40, 40, 40);
+	color: white;
+}
+
+#guitar_index{
+	width: 100%;
+	height: 90%;
 }
 
 #main_photos{
 	margin: auto;
 	text-align: center;
-	padding: 10px 10px 0px 10px;
+	padding: 0px 10px 0px 10px;
 }
 #main_photos ul{
 	display: inline-block;
@@ -83,6 +86,7 @@ th, td{
 }
 .multiple-items{
 	height: 250px;
+	padding-top: 50px;
 }
 .intro_content{
 	margin: auto;
@@ -104,8 +108,8 @@ th, td{
 }
 #intro_video{
 	padding: 25px 30px 0px 0px;
-	height: 300px;
-	width: 35%;
+	height: 200px;
+	width: 30%;
 	display: block;
 	margin: 0 auto;
 }
@@ -120,7 +124,7 @@ th, td{
 .videos ul li{
 	font-family: "Comfortaa";
 	font-size: 100%;
-	color: #0040ff;
+	color: black;
 	padding: 10px;
 	float: left;
 }
@@ -156,7 +160,7 @@ th, td{
 	margin-left: auto;
     margin-right: auto;
 	padding: 0px 0px 10px 0px;
-	background-color: rgb(40, 40, 40);
+	background-color: #e3e0cf;
 }
 .helpful_links ul{
 	display: inline-block;
@@ -169,10 +173,10 @@ th, td{
 	font-family: "Comfortaa";
 	text-decoration: none;
 	font-size: 125%;
-	color: #0040ff;
+	color: black;
 }
 .helpful_links ul li a:hover{
-	background-color: rgb(200, 200, 200);
+	color: white;
 }
 #helpful_desc_1{
 	height: 50%;
@@ -201,17 +205,17 @@ th, td{
 }
 /*CSS for Contact*/
 #contact_table{
-	background-color: rgb(40, 40, 40);
+	background-color: #c5d5cb;
 }
 #contact_table td {
 	padding: 10px;
 	font-family: "Comfortaa";
 	text-decoration: none;
 	font-size: 100%;
-	color: #0040ff;
+	color: black;
 }
 #contact_table a:hover{
-    background-color: rgb(200, 200, 200);
+    color: white;
 }
 /*CSS for Signup*/
 #sign_up, #text_input, #login, #login_form, #errors{
@@ -220,7 +224,7 @@ th, td{
 	font-family: "Comfortaa";
 	text-decoration: none;
 	font-size: 100%;
-	color: #0040ff;
+	color: black;
 }
 
 #parent {
@@ -250,7 +254,7 @@ th, td{
 	width: 20%;
 }
 /*CSS for Login Error*/
-#email_error_text, #email_error_unauth, #password_error_text, #password_number_error_text, #first_name_error_text, #last_name_error_text{
+#email_error_text, #email_error_unauth, #password_error_text, #password_number_error_text, #first_name_error_text, #last_name_error_text, #in_person_text{
 	color: #FF0000;
 }
 /*CSS for footer*/
@@ -265,5 +269,5 @@ th, td{
 	font-size: 75%;
 	font-family: "Comfortaa";
 	text-align: center;
-	color: #0040ff;
+	color: black;
 }
